Change_Header_Photo

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 
 /* Header */
 .header {
-  background-image: url(../image/Header/forHeader.JPG);
+  background-image: url(../image/Header/forHeader2.JPG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
