--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ body {
   margin: 0 auto;
 }
 
+.close {
+  display: none;
+}
+
 /* Header */
 .header {
   background-image: url(../image/Header/forHeader2.JPG);
@@ -42,7 +46,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: 80px;
+  column-gap: 100px;
   padding-top: 30px;
 }
 
@@ -50,9 +54,10 @@ body {
   font-family: "Cormorant Garamond";
   font-style: normal;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 26px;
   line-height: 130%;
-  color: #ffffff;
+  color: #fff;
+  /*   -webkit-text-stroke: 0.2px #000000; */
 }
 
 .header__title {
@@ -60,14 +65,14 @@ body {
   font-family: "Garamond";
   font-style: normal;
   font-weight: 700;
-  font-size: 72px;
+  font-size: 60px;
   line-height: 120%;
   text-align: center;
-  margin: 260px auto 220px; /* По макету снизу 420px уменьшил на 200 */
+  margin: 260px auto 120px; /* По макету снизу 420px уменьшил на 200 */
 }
 
 .header_size {
-  margin: 160px 0 220px 30px;
+  margin: 60px 0 150px 30px;
   width: 750px;
 }
 
@@ -76,7 +81,8 @@ body {
   text-align: center;
 }
 .info__marks-img {
-  margin: 60px auto 30px;
+  margin: 30px auto 30px;
+  width: 60px;
 }
 .info__text {
   font-family: "Cormorant Garamond";
@@ -88,8 +94,8 @@ body {
   margin: 0 auto 10px;
 }
 
-.info__marks-img:last-child {
-  margin-bottom: 85px;
+.proba p:last-child {
+  margin-bottom: 50px;
 }
 
 .info__video-img {
@@ -127,7 +133,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 416px);
   column-gap: 10px;
-  row-gap: 10px;
+  row-gap: 40px;
 }
 
 .situations__item {
@@ -161,7 +167,7 @@ body {
 }
 
 .consultation__title {
-  margin: 85px auto 40px;
+  margin: 50px auto 10px;
 }
 
 .consultation__text {
@@ -245,7 +251,8 @@ ol li:last-child:before {
 .footer {
   display: flex;
   padding: 50px 0;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .contacts__title {
@@ -275,8 +282,6 @@ ol li:last-child:before {
   color: #ffffff;
 }
 
-.navigation {
-}
 .navigation__title {
   font-family: "Garamond";
   font-style: normal;
@@ -289,4 +294,141 @@ ol li:last-child:before {
 }
 .navigation__icon {
   padding-left: 15px;
+}
+
+/* GLO 1 кнопка */
+/* a.glo {
+  color: #fff;
+  padding: 15px 20px;
+  text-transform: uppercase;
+  width: 350px;
+  text-decoration: none;
+  text-align: center;
+  margin: 30px 0;
+  display: block;
+  background-image: linear-gradient(
+    to left,
+    transparent,
+    transparent 50%,
+    #967d7d 50%,
+    #967d7d
+  );
+  background-position: 100% 0;
+  background-size: 200% 100%;
+  transition: all 0.25s ease-in;
+  font: 400 18px tahoma;
+  border: 3px solid #967d7d;
+}
+a.glo:hover {
+  background-position: 0 0;
+  color: #fff;
+} */
+/*  */
+/* 2 Кнопка */
+/* .floating-button {
+  text-decoration: none;
+  display: inline-block;
+  width: 300px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 45px;
+  margin: 10px 20px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  font-weight: 600;
+  color: #524f4e;
+  background: white;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
+}
+.floating-button:hover {
+  background: #2ee59d;
+  box-shadow: 0 15px 20px rgba(46, 229, 157, 0.4);
+  color: white;
+  transform: translateY(-7px);
+} */
+
+/* 3 */
+/* .pulse {
+  margin: 100px;
+  display: block;
+  width: 300px;
+  height: 45px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  animation: pulse 2s infinite;
+}
+.pulse:hover {
+  animation: none;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+} */
+
+/* 4 */
+.button {
+  background-color: #1c87c9;
+  -webkit-border-radius: 60px;
+  border-radius: 60px;
+  border: none;
+  color: #eeeeee;
+  cursor: pointer;
+  display: inline-block;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  width: 300px;
+  margin: 100px 0px 0 260px;
+}
+@keyframes glowing {
+  0% {
+    background-color: #a80505;
+    box-shadow: 0 0 3px #a80505;
+  }
+  50% {
+    background-color: #e81919;
+    box-shadow: 0 0 10px #e81919;
+  }
+  100% {
+    background-color: #a80505;
+    box-shadow: 0 0 3px #a80505;
+  }
+}
+.button {
+  animation: glowing 1300ms infinite;
+}
+
+.button__div {
+  /* text-align: center; */
+  margin: 0 0;
 }
