--- a/css/main.css
+++ b/css/main.css
@@ -20,27 +20,13 @@ body {
 
 /* Header */
 .header {
-  background-image: url(../image/Header/forHeader2.JPG);
+  background-image: url(../image/Header/forHeader.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
   flex-direction: column;
-  /* opacity: 0.8; */
 }
-
-/* .nav-container {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 30px;
-} */
-
-/* .contacts-social {
-  display: flex;
-  padding-top: 30px;
-  column-gap: 80px;
-  padding-left: 50px;
-} */
 
 .nav {
   display: flex;
@@ -57,18 +43,16 @@ body {
   font-size: 26px;
   line-height: 130%;
   color: #fff;
-  /*   -webkit-text-stroke: 0.2px #000000; */
 }
 
 .header__title {
-  /* width: 961px; */
   font-family: "Garamond";
   font-style: normal;
   font-weight: 700;
   font-size: 60px;
   line-height: 120%;
   text-align: center;
-  margin: 260px auto 145px; /* По макету снизу 420px уменьшил на 200 */
+  margin: 260px auto 145px;
 }
 
 .header_size {
@@ -107,7 +91,6 @@ body {
 
 .video {
   width: 416px;
-  /* height: 386px; */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -296,104 +279,6 @@ ol li:last-child:before {
   padding-left: 15px;
 }
 
-/* GLO 1 кнопка */
-/* a.glo {
-  color: #fff;
-  padding: 15px 20px;
-  text-transform: uppercase;
-  width: 350px;
-  text-decoration: none;
-  text-align: center;
-  margin: 30px 0;
-  display: block;
-  background-image: linear-gradient(
-    to left,
-    transparent,
-    transparent 50%,
-    #967d7d 50%,
-    #967d7d
-  );
-  background-position: 100% 0;
-  background-size: 200% 100%;
-  transition: all 0.25s ease-in;
-  font: 400 18px tahoma;
-  border: 3px solid #967d7d;
-}
-a.glo:hover {
-  background-position: 0 0;
-  color: #fff;
-} */
-/*  */
-/* 2 Кнопка */
-/* .floating-button {
-  text-decoration: none;
-  display: inline-block;
-  width: 300px;
-  height: 45px;
-  line-height: 45px;
-  border-radius: 45px;
-  margin: 10px 20px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  text-align: center;
-  letter-spacing: 3px;
-  font-weight: 600;
-  color: #524f4e;
-  background: white;
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-  transition: 0.3s;
-}
-.floating-button:hover {
-  background: #2ee59d;
-  box-shadow: 0 15px 20px rgba(46, 229, 157, 0.4);
-  color: white;
-  transform: translateY(-7px);
-} */
-
-/* 3 */
-/* .pulse {
-  margin: 100px;
-  display: block;
-  width: 300px;
-  height: 45px;
-  border-radius: 50%;
-  background: #fff;
-  cursor: pointer;
-  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
-  animation: pulse 2s infinite;
-}
-.pulse:hover {
-  animation: none;
-}
-
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
-  }
-  70% {
-    -webkit-box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
-  }
-  100% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
-}
-@keyframes pulse {
-  0% {
-    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
-  }
-  70% {
-    -moz-box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
-  }
-  100% {
-    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
-} */
-
-/* 4 */
 .button {
   background-color: #1c87c9;
   -webkit-border-radius: 60px;
@@ -429,6 +314,5 @@ a.glo:hover {
 }
 
 .button__div {
-  /* text-align: center; */
   margin: 0 0;
 }
