--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
   display: none;
 }
 
-/* Header */
+/* Header's */
 .header {
   background-image: url(../image/Header/forHeader.jpg);
   background-repeat: no-repeat;
