--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 
 /* Header's */
 .header {
-  background-image: url(../image/Header/forHeader.jpg);
+  background-image: url(../image/Header/forHeader2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
