--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
   font-family: "Garamond";
   font-style: normal;
   font-weight: 700;
-  font-size: 60px;
+  font-size: 54px;
   line-height: 120%;
   text-align: center;
   margin: 260px auto 145px;
@@ -75,7 +75,7 @@ body {
   font-size: 27px;
   line-height: 130%;
   max-width: auto;
-  margin: 0 auto 10px;
+  margin: 0 auto 0px;
 }
 
 .proba p:last-child {
@@ -155,7 +155,11 @@ body {
 
 .consultation__text {
   text-align: center;
-  margin-bottom: 25px;
+  margin-bottom: 0;
+}
+
+.consultation__size {
+  margin-bottom: 10px;
 }
 
 ul {
@@ -164,7 +168,7 @@ ul {
   position: relative;
   margin: 0 0 0 60px;
   padding: 15px 0 5px 0;
-  font-size: 18px;
+  font-size: 19px;
 }
 ul li {
   position: relative;
@@ -228,7 +232,11 @@ ol li:last-child:before {
 }
 
 .education__title {
-  margin: 50px auto 5px;
+  margin: 25px auto 5px;
+}
+
+.rewiews_title {
+  margin: 10px auto 5px;
 }
 
 .footer {
