Mobile version_414px

--- a/blocks/header/__img/header__img.css
+++ b/blocks/header/__img/header__img.css
@@ -2,10 +2,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 320px;
+  height: 100%;
+  width: auto;
 }
-
-/* .header__img {
-  position: relative;
-}
- */
