--- a/blocks/situations/situations.css
+++ b/blocks/situations/situations.css
@@ -1,6 +1,6 @@
 .situations {
   display: grid;
-  grid-template-columns: repeat(1, 320px);
+  grid-template-columns: repeat(1, auto);
   row-gap: 20px;
 }
 
