--- a/blocks/button-reg/button-reg.css
+++ b/blocks/button-reg/button-reg.css
@@ -11,7 +11,6 @@
   padding: 10px 10px;
   text-align: center;
   text-decoration: none;
-  width: 160px;
   margin: 5px 0 15px 10px;
 }
 @keyframes glowing {
@@ -30,6 +29,13 @@
 }
 .button-reg {
   animation: glowing 1300ms infinite;
+}
+
+@media screen and (min-width: 414px) {
+  .button-reg {
+    font-size: 15px;
+    margin: 20px 0px 0 25px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
