--- a/blocks/info/__nav/info__nav.css
+++ b/blocks/info/__nav/info__nav.css
@@ -6,6 +6,12 @@
   row-gap: 10px;
 }
 
+@media screen and (min-width: 414px) {
+  .info__nav {
+    grid-template-columns: repeat(5, auto);
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .info__nav {
     margin: 50px auto;
