--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,7 +1,12 @@
 .page__container {
-  max-width: 320px;
-  max-width: 320px;
+  min-width: 320px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 414px) {
+  .page__container {
+    max-width: 414px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
