--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,5 @@
 /* Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap");
+@import url(../fonts/fonts.css);
 
 /* Libraries */
 @import url(../blocks/reset/reset.css);
