--- a/src/blocks/button-reg/button-reg.css
+++ b/src/blocks/button-reg/button-reg.css
@@ -38,9 +38,17 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 800px) {
   .button-reg {
     width: 300px;
-    margin: 75px 0px 0 260px;
+    margin: 75px 0px 0 80px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .button-reg {
+    font-size: 30px;
+    width: 454px;
+    margin: 140px 0px 0 130px;
   }
 }
