--- a/src/blocks/close.css
+++ b/src/blocks/close.css
@@ -1,3 +1,11 @@
-.close {
-  display: none;
+@media screen and (min-width: 1024px) {
+  .close {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .close {
+    display: block;
+  }
 }
