--- a/src/blocks/consultation/__table/consultation__table.css
+++ b/src/blocks/consultation/__table/consultation__table.css
@@ -5,7 +5,15 @@
   row-gap: 10px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 800px) {
+  .consultation__table {
+    grid-template-columns: repeat(2, 350px);
+    justify-content: space-evenly;
+    column-gap: 0px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
   .consultation__table {
     grid-template-columns: repeat(3, 416px);
   }
