--- a/src/blocks/consultation/__title/consultation__title.css
+++ b/src/blocks/consultation/__title/consultation__title.css
@@ -3,13 +3,12 @@
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
-  /* max-width: 160px; */
   text-align: center;
   margin: 30px 0 0 0;
 }
 
 @media screen and (min-width: 1024px) {
   .consultation__title {
-    max-width: 160px;
+    min-width: 160px;
   }
 }
