--- a/src/blocks/footer/__nav/footer__nav.css
+++ b/src/blocks/footer/__nav/footer__nav.css
@@ -1,3 +1,9 @@
 .footer__nav {
   text-align: center;
 }
+
+@media screen and (min-width: 800px) {
+  .footer__nav {
+    margin: 0 5px 0 0;
+  }
+}
