--- a/src/blocks/info/__video/info__video.css
+++ b/src/blocks/info/__video/info__video.css
@@ -1,20 +1,31 @@
 .info__video {
-  width: 320px;
+  min-width: 100%;
+  min-height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-@media screen and (min-width: 414px) {
+@media screen and (min-width: 800px) {
   .info__video {
-    width: 413px;
-    height: 230px;
+    margin: 0 auto;
+    min-width: 97%;
+    height: 350px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .info__video {
-    width: 416px;
-    height: 315px;
+    margin: 0 auto;
+    min-width: 97%;
+    height: 350px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .info__video {
+    margin: 0 auto;
+    min-width: 100%;
+    height: 310px;
   }
 }
