--- a/src/blocks/page/__container/page__container.css
+++ b/src/blocks/page/__container/page__container.css
@@ -1,5 +1,5 @@
 .page__container {
-  min-width: 320px;
+  max-width: 320px;
   margin: 0 auto;
 }
 
@@ -9,9 +9,22 @@
   }
 }
 
+@media screen and (min-width: 800px) {
+  .page__container {
+    max-width: 800px;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .page__container {
     max-width: 1024px;
-    padding: 0 30px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .page__container {
+    max-width: 1280px;
+    margin: 0 auto;
   }
 }
