--- a/src/blocks/footer/__container/footer__container.css
+++ b/src/blocks/footer/__container/footer__container.css
@@ -8,7 +8,7 @@
   .footer__container {
     display: flex;
     flex-direction: row;
-    padding: 50px 0;
+    /*   padding: 50px 0; */
     justify-content: space-evenly;
   }
 }
@@ -17,8 +17,8 @@
   .footer__container {
     display: flex;
     flex-direction: row;
-    padding: 50px 0;
     justify-content: space-evenly;
     align-items: center;
+    align-items: flex-start;
   }
 }
