--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -2,7 +2,10 @@
   margin-top: 25px;
   font-style: normal;
   font-weight: 700;
-  font-size: 15px;
+  font-size: 26px;
   color: #ffffff;
   padding: 0 0 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
