--- a/src/blocks/header/__img/header__img.css
+++ b/src/blocks/header/__img/header__img.css
@@ -1,7 +1,7 @@
 .header__img {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  /*   background-repeat: no-repeat;
+  background-size: cover; */
+  /*  background-position: center; */
   height: 100%;
   width: auto;
 }
