--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -3,6 +3,8 @@
   font-style: normal;
   font-weight: 600;
   font-size: 26px;
-  line-height: 130%;
+  line-height: 0%;
   color: #fff;
+  text-align: center;
+  margin: 0 auto;
 }
