--- a/src/blocks/header/__nav/header__nav.css
+++ b/src/blocks/header/__nav/header__nav.css
@@ -2,31 +2,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  left: 50px;
+  /* left: 50px; */
 }
 
 @media screen and (min-width: 800px) {
   .header__nav {
     padding-top: 30px;
     position: relative;
-    left: 50px;
+    /* left: 50px; */
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header__nav {
-    /*  column-gap: 50px; */
-    padding-top: 30px;
+    column-gap: 80px;
+    padding-top: 10px;
     position: relative;
-    left: 50px;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .header__nav {
-    /*  column-gap: 10px; */
-    padding-top: 30px;
-    position: relative;
-    left: 50px;
+    left: 55px;
+    text-align: center;
   }
 }
