--- a/src/blocks/consultation/__link/consultation__link.css
+++ b/src/blocks/consultation/__link/consultation__link.css
@@ -9,7 +9,9 @@ a.consultation__link {
     0 1px 2px rgba(0, 0, 0, 0.05);
   color: #333333;
   text-decoration: none;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   font-size: 14px;
   width: 120px;
   line-height: 20px;
@@ -76,18 +78,12 @@ a.consultation__link:hover:before {
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   a.consultation__link {
     width: 300px;
     height: 40px;
     font-size: 27px;
     height: 60px;
     line-height: 80%;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  a.consultation__link:first-child {
-    padding-top: 15px;
   }
 }
