--- a/src/blocks/footer/__copyright-img/footer__copyright-img.css
+++ b/src/blocks/footer/__copyright-img/footer__copyright-img.css
@@ -1,3 +1,9 @@
 .footer__copyright-img {
-  width: 100%;
+  width: 80%;
+}
+
+@media screen and (min-width: 414px) {
+  .footer__copyright-img {
+    width: 100%;
+  }
 }
