--- a/src/blocks/hamburger-menu/hamburger-menu.css
+++ b/src/blocks/hamburger-menu/hamburger-menu.css
@@ -89,7 +89,7 @@
   }
   #menu-toggle:checked ~ .menu li {
     border: 1px solid #fff;
-    height: 2.5em;
+    height: 3em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
@@ -100,7 +100,7 @@
     padding: 0.5em 0;
     width: 100%;
     color: white;
-    background-color: #967d7d;
+    background-color: #d56b6b;
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
