--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -3,8 +3,24 @@
   font-style: normal;
   font-weight: 600;
   font-size: 26px;
-  line-height: 0%;
+  line-height: 70%;
   color: #fff;
   text-align: center;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .header__link {
+    font-size: 20px;
+    line-height: 0%;
+    color: #fff;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .header__link {
+    font-size: 22px;
+    line-height: 70%;
+    color: #fff;
+  }
 }
