--- a/src/blocks/header/__nav/header__nav.css
+++ b/src/blocks/header/__nav/header__nav.css
@@ -2,23 +2,31 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* left: 50px; */
+}
+
+@media screen and (min-width: 768px) {
+  .header__nav {
+    position: relative;
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 800px) {
   .header__nav {
     padding-top: 30px;
-    position: relative;
-    /* left: 50px; */
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header__nav {
-    column-gap: 80px;
+    column-gap: 20px;
     padding-top: 10px;
-    position: relative;
-    left: 55px;
-    text-align: center;
+    left: 10px;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .header__nav {
+    column-gap: 75px;
   }
 }
