--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -16,12 +16,19 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header__title {
+    font-size: 38px;
+    line-height: 120%;
+    margin: 30px 0 0 60px;
+    width: 390px;
+  }
+}
+
 @media screen and (min-width: 800px) {
   .header__title {
     font-size: 40px;
-    line-height: 120%;
     margin: 60px 0 0 80px;
-    width: 390px;
   }
 }
 
