--- a/src/blocks/page/__container/page__container.css
+++ b/src/blocks/page/__container/page__container.css
@@ -9,6 +9,12 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .page__container {
+    max-width: 768px;
+  }
+}
+
 @media screen and (min-width: 800px) {
   .page__container {
     max-width: 800px;
