--- a/src/blocks/header/__img/header__img.css
+++ b/src/blocks/header/__img/header__img.css
@@ -1,5 +1,5 @@
 .header__img {
-  background: url("../../../images/forHeader2.jpg");
+  background: url("../../../images/forHeader2.webp");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
