--- a/src/blocks/education/__diploms-item/education__diploms-item.css
+++ b/src/blocks/education/__diploms-item/education__diploms-item.css
@@ -3,11 +3,11 @@
   height: 100%;
 } */
 
-.swiper-slide {
+/* .swiper-slide {
   width: 50%;
   height: 400px;
 }
 
 .swiper-slide-size {
   width: auto !important;
-}
+} */
