--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -64,7 +64,9 @@
 @import url(../blocks/consultation/__link/consultation__link.css);
 
 /* Block: Education */
+@import url(../blocks/education/education.css);
 @import url(../blocks/education/__title/education__title.css);
+@import url(../blocks/education/__items/education__items.css);
 @import url(../blocks/education/__diploms-item/education__diploms-item.css);
 
 /* Block: Rewiews */
