--- a/src/blocks/title/title.css
+++ b/src/blocks/title/title.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 15px;
-  max-width: 160px;
+  /* max-width: 160px; */
   text-align: center;
 }
 
