--- a/src/blocks/header/__nav/header__nav.css
+++ b/src/blocks/header/__nav/header__nav.css
@@ -6,14 +6,21 @@
 
 @media screen and (min-width: 768px) {
   .header__nav {
+    justify-content: space-around;
     position: relative;
     text-align: center;
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1024px) {
   .header__nav {
     padding-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .header__nav {
+    column-gap: 75px;
   }
 }
 
@@ -22,11 +29,5 @@
     column-gap: 20px;
     padding-top: 10px;
     left: 10px;
-  }
-}
-
-@media screen and (min-width: 1080px) {
-  .header__nav {
-    column-gap: 75px;
   }
 }
