--- a/src/blocks/footer/__container/footer__container.css
+++ b/src/blocks/footer/__container/footer__container.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 25px;
 }
 
 @media screen and (min-width: 768px) {
@@ -10,6 +11,7 @@
     flex-direction: row;
     /*   padding: 50px 0; */
     justify-content: space-evenly;
+    margin-top: 50px;
   }
 }
 
