--- a/main.css
+++ b/main.css
@@ -41,9 +41,14 @@
 ul{counter-reset:num;font-size:19px;list-style-type:none;margin:0 0 0 60px;padding:15px 0 5px}ul,ul li{position:relative}ul li{line-height:1.4;margin:0;padding:0 0 10px}ul li:after{background:#fff;border:1px solid #ef6780;border-radius:50%;color:#000;content:counter(num);counter-increment:num;display:inline-block;font-size:18px;height:28px;left:-45px;line-height:28px;position:absolute;text-align:center;top:0;width:28px}ul:before{border-left:1px solid #ef6780;bottom:15px;content:"";left:-30px;position:absolute;top:15px;width:1px}ol li:last-child:before{background:#fff;bottom:0;content:"";display:inline-block;left:-38px;position:absolute;top:0;width:28px}@media screen and (min-width:799px){ul:before{border-left:none}}
 .consultation__margin{margin-bottom:10px}
 .consultation__table{-moz-column-gap:10px;column-gap:10px;display:grid;grid-template-columns:repeat(1,auto);row-gap:10px}@media screen and (min-width:768px){.consultation__table{-moz-column-gap:0;column-gap:0;grid-template-columns:repeat(2,350px);justify-content:space-evenly}}@media screen and (min-width:1280px){.consultation__table{grid-template-columns:repeat(3,416px)}}
-.consultation__table-item *{border:5px solid #fff;display:table-cell;height:95px;text-align:center;vertical-align:middle}
+.consultation__table-item{align-items:center;border:5px solid #fff;display:flex;flex-direction:column;height:115px;justify-content:center;text-align:center}
 .consultation__container-price-contract{display:flex}
 a.consultation__link{-webkit-tap-highlight-color:rgba(0,0,0,0);background:linear-gradient(180deg,#fff,#e6e6e6) #f5f5f5 repeat-x;border:1px solid rgba(0,0,0,.1);border-bottom-color:#b3b3b3;border-radius:4px;box-shadow:inset 0 1px 0 hsla(0,0%,100%,.2),0 1px 2px rgba(0,0,0,.05);box-shadow:0 0 1px transparent;color:#333;display:flex;flex-direction:column;font-family:Garamond;font-size:14px;justify-content:space-around;line-height:20px;margin:20px auto;padding:4px 12px;position:relative;text-align:center;text-decoration:none;text-shadow:0 1px 1px hsla(0,0%,100%,.75);transform:translateZ(0);transition-duration:.3s;transition-property:transform;vertical-align:middle;width:120px}a.consultation__link:before{background:radial-gradient(ellipse at center,rgba(0,0,0,.35) 0,transparent 80%);content:"";height:10px;left:5%;opacity:0;pointer-events:none;position:absolute;top:100%;transition-duration:.3s;transition-property:transform,opacity;width:90%;z-index:-1}a.consultation__link:hover{transform:translateY(-5px)}a.consultation__link:hover:before{opacity:1;transform:translateY(5px)}@media screen and (min-width:800px){a.consultation__link{font-size:20px;width:200px}}@media screen and (min-width:768px){a.consultation__link{font-size:27px;height:40px;height:60px;line-height:80%;width:300px}}
+.consultation__table-title-check-list{margin-top:20px}
+.consultation__link-check-list{margin:10px 0 0;padding:10px 0 0}
+.consultation__copyright{font-size:10px;text-align:center}@media screen and (min-width:800px){.consultation__copyright{font-size:15px}}
+.consultation__info{display:flex}
+.consultation__info-img{height:20px;margin:20px 0 0 10px;width:20px}.block{position:relative}.hidden{background-color:#863232;border-radius:10px;bottom:130%;bottom:76px;box-shadow:0 1px 1pxrgba (0,0,0,.16);color:#fff;display:none;font-size:12px;padding:5px;position:absolute;text-align:center}.hover:hover+.hidden{display:block}@media screen and (min-width:1024px){.consultation__info-img{margin:20px 0 0 20px}.hidden{background-color:#863232;border-radius:10px;bottom:130%;bottom:76px;box-shadow:0 1px 1pxrgba (0,0,0,.16);color:#fff;display:none;font-size:20px;left:130px;padding:5px;position:absolute;right:-750px;text-align:center}.hover:hover+.hidden{display:block}}
 
 .education__title{font-family:Cormorant Garamond;font-size:30px;font-style:normal;font-weight:700;margin:10px auto}@media screen and (min-width:1024px){.education__title{font-size:30px;line-height:85%;margin:25px auto 5px}}
 .education__education-title{font-size:24px;margin:10px auto}@media screen and (min-width:1024px){.education__education-title{font-size:50px;margin-bottom:20px}}
@@ -54,7 +59,7 @@ a.consultation__link{-webkit-tap-highlight-color:rgba(0,0,0,0);background:linear
 .education__slide{text-align:center}
 .rewiews_title{font-family:Cormorant Garamond;font-size:30px;font-style:normal;font-weight:700;margin:10px auto;text-align:center}@media screen and (min-width:1024px){.rewiews_title{font-size:30px;line-height:85%;margin:10px auto 5px}}
 
-.footer__container{align-items:center;display:flex;flex-direction:column}@media screen and (min-width:768px){.footer__container{display:flex;flex-direction:row;justify-content:space-evenly}}@media screen and (min-width:1024px){.footer__container{align-items:center;align-items:flex-start;display:flex;flex-direction:row;justify-content:space-evenly}}
+.footer__container{align-items:center;display:flex;flex-direction:column;margin-top:25px}@media screen and (min-width:768px){.footer__container{display:flex;flex-direction:row;justify-content:space-evenly;margin-top:50px}}@media screen and (min-width:1024px){.footer__container{align-items:center;align-items:flex-start;display:flex;flex-direction:row;justify-content:space-evenly}}
 .footer__title{color:#fff;font-family:Garamond;font-size:20px;font-style:normal;font-weight:700;padding:0 0 5px 10px}@media screen and (min-width:1024px){.footer__title{font-size:24px;line-height:120%;padding-bottom:10px}}
 .footer__items{display:flex;flex-direction:column}
 .footer__item{color:#fff;font-family:Cormorant Garamond;font-size:18px;font-style:normal;font-weight:400;padding:0 0 10px 10px}@media screen and (min-width:1024px){.footer__item{line-height:130%;padding-bottom:15px}}
@@ -65,6 +70,8 @@ a.consultation__link{-webkit-tap-highlight-color:rgba(0,0,0,0);background:linear
 .footer__copyright{align-items:center;color:#fff;display:flex;font-size:13px;font-style:normal;font-weight:700;justify-content:flex-end;margin-top:25px;padding:0 0 5px 10px}@media screen and (min-width:414px){.footer__copyright{font-size:20px}}@media screen and (min-width:800px){.footer__copyright{font-size:26px}}
 .footer__copyright-link{padding:0 0 0 5px;width:80px}@media screen and (min-width:414px){.footer__copyright-link{width:120px}}
 .footer__copyright-img{width:80%}@media screen and (min-width:414px){.footer__copyright-img{width:100%}}
-.info__test_margin{margin-top:10px}
 .education__diploms-item_size{width:194px}
+.info__test_margin{margin-top:10px}
+.consultation__title_margin{margin-top:0}
+.footer__icon_size{height:32px;width:32px}
 
