--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,7 @@
 
 /* Button_reg */
 @import url(../blocks/button-reg/button-reg.css);
+@import url(../blocks/button-reg/reviews/button-reg-reviews.css);
 @import url(../blocks/button-reg/__footer/button-reg__footer.css);
 @import url(../blocks/button-reg/education/education_btn_reg.css);
 
@@ -27,7 +28,6 @@
 /* Block: Header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__img/header__img.css);
-@import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__nav/header__nav.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__title/header__title.css);
@@ -49,7 +49,6 @@
 @import url(../blocks/info/__container-post/info__container-post.css);
 @import url(../blocks/info/__post/info__post.css);
 @import url(../blocks/info/__nav/info__nav.css);
-@import url(../blocks/info/__icon/info__icon.css);
 
 /* Block: Situations */
 @import url(../blocks/situations/situations.css);
@@ -76,25 +75,20 @@
 @import url(../blocks/consultation/__info-img/consultation__info-img.css);
 
 /* Block: Education */
-@import url(../blocks/education/education.css);
 @import url(../blocks/education/__title/education__title.css);
 @import url(../blocks/education/__education-title/education__education-title.css);
 @import url(../blocks/education/__items/education__items.css);
-@import url(../blocks/education/__diploms-item/education__diploms-item.css);
 @import url(../blocks/education/items1/items1.css);
 @import url(../blocks/education/__diploms-subtitle/education__diploms-subtitle.css);
 @import url(../blocks/education/__slide/education__slide.css);
 
 /* Block: Rewiews */
-@import url(../blocks/rewiews/__title/rewiews__title.css);
-
+@import url(../blocks/reviews/reviews.css);
 /* Block: Footer */
-@import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
 @import url(../blocks/footer/__title/footer__title.css);
 @import url(../blocks/footer/__items/footer__items.css);
 @import url(../blocks/footer/__item/footer__item.css);
-@import url(../blocks/footer/__item-link/footer__item-link.css);
 @import url(../blocks/footer/__nav/footer__nav.css);
 @import url(../blocks/footer/__container-icon/footer__container-icon.css);
 @import url(../blocks/footer/__icon/footer__icon.css);
