--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -536,14 +536,13 @@ a {
     width: 545px;
   }
 }
-
 .header_text {
   font-family: Garamond;
   font-style: normal;
   font-weight: 700;
   margin: 5px 0 15px 10px;
   text-align: center;
-  width: 160px;
+  width: 268px;
   background-color: #967d7d;
   border-radius: 20px;
   padding: 5px;
@@ -552,8 +551,8 @@ a {
 @media screen and (min-width: 414px) {
   .header_text {
     margin: 40px 0 0 25px;
-    width: 200px;
-    font-size: 10px;
+    width: 363px;
+    font-size: 13px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -594,13 +593,15 @@ a {
   /* margin: 5px 0 15px 10px; */
   text-align: center;
   width: 160px;
+  margin-bottom: 90px;
 }
 @media screen and (min-width: 414px) {
   .header__subtitle {
     font-size: 20px;
     /* margin: 40px 0 25px 25px; */
     width: 200px;
-  }
+    margin-bottom: 70px;
+}
 }
 /* @media screen and (min-width: 768px) {
   .header__subtitle {
