--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -286,13 +286,13 @@ legend {
 }
 .page__container {
   margin: 0 auto;
-  max-width: 320px;
+  /* max-width: 320px; */
 }
-@media screen and (min-width: 414px) {
+/* @media screen and (min-width: 414px) {
   .page__container {
     max-width: 414px;
   }
-}
+} */
 @media screen and (min-width: 768px) {
   .page__container {
     max-width: 768px;
@@ -445,20 +445,18 @@ a {
 } */
 
 .header__nav {
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   justify-content: center;
+  justify-content: space-between;
+  text-align: center;
+
 }
 @media screen and (min-width: 768px) {
   .header__nav {
     justify-content: space-around;
     position: relative;
     text-align: center;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .header__nav {
-    padding-top: 30px;
   }
 }
 @media screen and (min-width: 1080px) {
@@ -478,7 +476,7 @@ a {
 .header__link {
   color: #fff;
   font-family: Cormorant Garamond;
-  font-size: 26px;
+/*   font-size: 26px; */
   font-style: normal;
   font-weight: 600;
   line-height: 70%;
@@ -536,6 +534,11 @@ a {
     width: 545px;
   }
 }
+.header__container {
+  position: relative;
+  z-index: 10;
+}
+
 .header_text {
   font-family: Garamond;
   font-style: normal;
@@ -547,6 +550,7 @@ a {
   border-radius: 20px;
   padding: 5px;
   font-size: 10px;
+ /*  position: absolute; */
 }
 @media screen and (min-width: 414px) {
   .header_text {
@@ -555,6 +559,12 @@ a {
     font-size: 13px;
   }
 }
+/* @media screen and (min-width: 700px) {
+  .header_text {
+    position: relative;
+  }
+} */
+
 @media screen and (min-width: 768px) {
   .header_text {
     line-height: 120%;
@@ -1002,12 +1012,13 @@ ol li:last-child:before {
   }
 }
 .consultation__table-item {
-  align-items: center;
   border: 5px solid #fff;
-  display: flex;
-  flex-direction: column;
   height: 115px;
-  justify-content: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  /* justify-content: center; */
   text-align: center;
 }
 .consultation__container-price-contract {
@@ -1082,9 +1093,9 @@ a.consultation__link:hover:before {
     width: 300px;
   }
 }
-.consultation__table-title-check-list {
+/* .consultation__table-title-check-list {
   margin-top: 20px;
-}
+} */
 .consultation__link-check-list {
   margin: 10px 0 0;
   padding: 10px 0 0;
@@ -1103,9 +1114,20 @@ a.consultation__link:hover:before {
 }
 .consultation__info-img {
   height: 20px;
-  margin: 20px 0 0 10px;
+  margin-left: 5px;
+  padding: 0  0 0 0;
   width: 20px;
 }
+
+@media screen and (min-width: 348px) {
+  .consultation__info-img {
+    margin-left: 5px;
+  }
+} 
+
+
+
+
 .block {
   position: relative;
 }
@@ -1126,9 +1148,9 @@ a.consultation__link:hover:before {
   display: block;
 }
 @media screen and (min-width: 1024px) {
-  .consultation__info-img {
-    margin: 20px 0 0 20px;
-  }
+/*   .consultation__info-img {
+    margin-left: 20px 0 0 20px;
+  } */
   .hidden {
     background-color: #863232;
     border-radius: 10px;
